--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,18 @@ FetchContent_MakeAvailable(SFML)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(LifeGame main.cpp)
+add_executable(LifeGame main.cpp
+        Controller/Controller.cpp
+        Controller/Controller.h
+        Model/Cell/Cell.cpp
+        Model/Cell/Cell.h
+        Model/Grid/Grid.cpp
+        Model/Grid/Grid.h
+        Model/Game/Game.cpp
+        Model/Game/Game.h
+        View/ConsoleView/ConsoleView.cpp
+        View/ConsoleView/ConsoleView.h
+        View/GraphicView/GraphicView.cpp
+        View/GraphicView/GraphicView.h)
 
 target_link_libraries(LifeGame sfml-graphics sfml-window sfml-system)
