--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -23,45 +23,33 @@ categories:
 
 change-template: '- $TITLE (#$NUMBER) par @$AUTHOR'
 template: |
-  # 📦 Version $RELEASE_TITLE
+  # 📦 Version - v$NEXT_PATCH_VERSION
 
-  ## 🚀 Nouveautés
-  - Nouvelles fonctionnalités ajoutées pour enrichir l'expérience.
-
-  ## 🐛 Corrections de bugs
-  - Améliorations pour corriger des comportements inattendus.
-
-  ## 🔧 Réorganisation du code (Refactoring)
-  - Modifications structurelles pour un code plus clair et maintenable.
-
-  ## 📖 Documentation
-  - Mises à jour pour la documentation du projet et le code.
-
-  ## ✨ Style
-  - Changements de style et de formatage pour améliorer la lisibilité.
-
-  ## ⚡ Performance
-  - Optimisations pour des performances améliorées.
-
-  ## 🧪 Tests
-  - Nouvelles vérifications et améliorations de couverture des tests.
-
-  ## 🧹 Tâches diverses et maintenance
-  - Mise à jour de l’environnement et des configurations.
-
-  ## ⚙️ Compilation et Build
-  - Configuration de compilation et gestion des dépendances.
+  ## 🌟 Quoi de neuf ?
+  $CHANGES
 
   ---
 
-  ### Scopes inclus dans cette release :
-  - **Model** : Modèle de données (classes Game, Grid, Cell)
-  - **View** : Vues ConsoleView et GraphicView
-  - **Controller** : Gestion des interactions entre modèle et vues
-  - **File** : Chargement et gestion des fichiers de grille
-  - **Config** : Configurations diverses (CMake, dépendances)
+  ### 🔍 Détails des Scopes et Types de Commits
+  - **Types de commits :**
+    - `feat` : Nouveautés et fonctionnalités.
+    - `fix` : Corrections de bugs.
+    - `refactor` : Réorganisation du code sans changement fonctionnel.
+    - `docs` : Documentation et commentaires.
+    - `style` : Améliorations de style sans impact sur le code.
+    - `test` : Ajouts ou modifications de tests.
+    - `perf` : Optimisations de performance.
+    - `chore` : Maintenance et configuration.
+    - `build` : Configuration de build et gestion des dépendances.
+
+  - **Scopes** :
+    - `model` : Modèle de données, incluant les classes `Game`, `Grid`, et `Cell`.
+    - `view` : Vues `ConsoleView` et `GraphicView`.
+    - `controller` : Gestion des interactions entre le modèle et les vues.
+    - `file` : Chargement et gestion des fichiers.
+    - `config` : Configuration du projet et dépendances.
+
+  ---
 
   ### 👥 Contributeurs
   $CONTRIBUTORS
-
-  **Voir les changements complets** : [Changelog complet](https://github.com/RiperPro03/LifeGame/compare/v$PREVIOUS_TAG...v$NEW_TAG)
