feat(model): Add an “obstacle” cell type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,9 @@ add_executable(LifeGame main.cpp
         View/GraphicView/GraphicView.cpp
         View/GraphicView/GraphicView.h
         View/ConfigView/ConfigView.cpp
-        View/ConfigView/ConfigView.h)
+        View/ConfigView/ConfigView.h
+        Model/ObstacleCell/ObstacleCell.cpp
+        Model/ObstacleCell/ObstacleCell.h)
 
 target_link_libraries(LifeGame sfml-graphics sfml-window sfml-system)
 
